--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@ body {
   background-color: #3c873a;
   color: #303030;
 }
+.code-container.terminal {
+  background-color: #191715;
+  color: #e1e3e8;
+}
 .code-panel {
   border-radius: 10px;
   background-color: #4b4b4b;
@@ -55,7 +59,7 @@ body {
   border-radius: 20px;
   height: 20px;
   margin-left: 8px;
-  padding: 3px;
-  transform: translateY(8px);
+  padding: 2px;
+  transform: translateY(7px);
   width: 20px;
 }
