--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@ body {
   background-color: #5d8e94;
   font-family: Arial, Helvetica, sans-serif;
 }
+input, select, button {
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  outline: none;
+  padding: 12px;
+  width: 30vw;
+}
+button:active {
+  transform: translateY(1px);
+}
 .nav-bar {
   background-color: #326a7d;
   color: white;
@@ -10,31 +21,15 @@ body {
   justify-content: center;
   padding: 20px;
 }
-.search {
-  border: none;
-  border-radius: 5px;
-  font-size: 1em;
-  outline: none;
-  padding: 12px;
-  width: 30vw;
-}
-.nav-bar .add {
-  border: none;
-  border-radius: 50%;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+.nav-bar button {
   cursor: pointer;
-  font-size: 1.5em;
-  outline: none;
   position: absolute;
-  top: 25px;
+  top: 20px;
   right: 50px;
-}
-.nav-bar .add:active {
-  transform: translateY(1px);
-  box-shadow: none;
+  width: 85px;
 }
 .code-container {
-  background-color: #abd4fa;
+  background-color: rgb(127, 229, 243);
   border-radius: 10px;
   margin: 30px 50px;
   padding: 3px 23px;
@@ -81,4 +76,21 @@ body {
   padding: 2px;
   transform: translateY(7px);
   width: 20px;
+}
+.add-lang {
+  background-color: white;
+  margin-left: 15px;
+  width: 15vw;
+}
+.add-code {
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  color: white;
+  margin: 15px;
+  width: 40%;
+}
+.save-button {
+  cursor: pointer;
+  margin-bottom: 15px;
+  width: 85px;
 }
